fixed image covers

--- a/css/style.css
+++ b/css/style.css
@@ -444,7 +444,7 @@ body {
   #drinkImage {
     background-size: 1150px;
     background-position: top center;
-    height: 80vh; }
+    height: 74vh; }
 
   #menuFood {
     background-attachment: scroll;
