--- a/sass/_mediaQuerries.scss
+++ b/sass/_mediaQuerries.scss
@@ -104,7 +104,7 @@
 	#drinkImage{
 		background-size: $coverImageSizeDtop;
 		background-position: top center;
-		height: 80vh;
+		height: 74vh;
 	}
 	#menuFood{
 		background-attachment: scroll;
